--- a/styles.css
+++ b/styles.css
@@ -41,8 +41,10 @@ ul li a:hover {
 #welcomebox {
   background-color: #FFDE7A;
   padding: 12.5%;
+	color: white;
   text-align: left;
-  background-image: url(homebackgroundcropped.jpg);
+  background-image: url(https://pbs.twimg.com/media/DxzlvDuWwAADkMm.jpg);
+	background-repeat: no-repeat
 }
 
 #missionstate {
