--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ ul li a:hover {
   text-align: left;
   background-image: url(https://might4right.github.io/minnpickleball/homepagegif.gif);
   background-size: cover;
-  background-repeat: no-repeat
+  background-repeat: no-repeat;
 }
 
 #missionstate {
