--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,55 @@
 	font-family: "Source Sans Pro"
 }
 
-nav {
+.topnav {
 	width: 100%;
 	height: 100px;
 	background-color: white;
+	overflow: hidden;
+}
+
+.topnav a {
+	float: left;
+	display: block;
+	text-decoration: none;
+	font-size: 15;
+	font-family: "Source Sans Pro";
+	font-weight: bold;
+	color: maroon;
+	padding: 0 20px;
+	line-height: 100px;
+	background-color: white;
+}
+
+.topnav a:hover {
+	color: gold;
+	
+}
+
+.topnav .icon {
+	display: none;
+}
+
+@media screen and (max-width: 600px) {
+	.topnav a:not(:first-child) {display: none;}
+	.topnav a.icon {
+		float: right;
+		display: block;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.topnav.responsive {position: relative;}
+	.topnav.responsive a.icon {
+		position: absolute;
+		right: 0;
+		top: 0;
+	}
+	.topnav.responsive a{
+		float: none;
+		display: block;
+		text-align: left;
+	}
 }
 	
 ul {
@@ -20,22 +65,6 @@ ul li {
 	display: inline-block;
 	float: left;
 	line-height: 100px;
-}
-
-ul li a {
-	display: block;
-	text-decoration: none;
-	font-size: 15;
-	font-family: "Source Sans Pro";
-	font-weight: bold;
-	color: maroon;
-	padding: 0 20px;
-	background-color: white;
-}
-
-ul li a:hover {
-	color: gold;
-	
 }
 
 #welcomebox {
